[gd_scene load_steps=5 format=3 uid="uid://bjnp12owvy3gu"]

[ext_resource type="VideoStream" path="res://physics/menu/root_menu/assets/intro_start.ogv" id="2_rt6m7"]
[ext_resource type="Script" path="res://physics/menu/root_menu/video_background.gd" id="3"]
[ext_resource type="VideoStream" path="res://physics/menu/root_menu/assets/intro_loop.ogv" id="3_kly2v"]
[ext_resource type="VideoStream" path="res://physics/menu/root_menu/assets/intro_click.ogv" id="4_morxh"]

[node name="C" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("3")

[node name="Intro" type="VideoStreamPlayer" parent="."]
layout_mode = 2
mouse_filter = 2
stream = ExtResource("2_rt6m7")
autoplay = true

[node name="Loop" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
stream = ExtResource("3_kly2v")

[node name="Click" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
stream = ExtResource("4_morxh")

[connection signal="finished" from="Intro" to="." method="_on_Intro_finished"]
[connection signal="finished" from="Loop" to="." method="_on_Loop_finished"]
[connection signal="finished" from="Click" to="." method="_on_Click_finished"]
